fix name alignment

--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,8 @@ ul {
     padding: 0;
     margin: 0;
     justify-self: start;
+    align-self: flex-start;
+    padding-top: 15px;
 }
 
 .nav button {
